--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation include("net.kyori:adventure-text-minimessage:4.14.0")
     modImplementation include("net.kyori:adventure-platform-fabric:5.5.2")
+    compileOnly("de.hexaoxi:carbonchat-api:2.1.0-beta.22")
 
         // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
